@@ -44,6 +44,7 @@
 * EBANX: add soft_descriptor field [jcreiff] #4658
 * CommerceHub: Add Apple Pay and Google Pay [gasb150] #4648
 * Global Collect & Alelo: Fixing year dependent failing tests [heavyblade] #4665
+* Moneris: Add Google Pay [sinourain] #4666
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
